# tinyclib

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE.txt  Makefile  README.md  mise.toml
.github/workflows/: autotag.yaml  release.yaml  test.yaml
cmake/: tinyclibConfig.cmake.in
include/: tl_app.h  tl_config.h  tl_constants.h  tl_debug.h  tl_error.h  tl_flag.h  tl_test.h
scripts/tests/docker/: Dockerfile.amd64  Dockerfile.arm64  Dockerfile.armv6  Dockerfile.armv7  Dockerfile.armv8
src/: tl_app.c  tl_config.c  tl_error.c  tl_flag.c  tl_test.c
tests/: CMakeLists.txt
tests/arch/generic/: tl_app_test.c  tl_config_test.c  tl_debug_test.c  tl_error_test.c  tl_test_test.c
tests/unit/: debug_test.c  error_test.c  flag_test.c  test_test.c  tl_app_test.c  tl_flag_test.c  tl_test_test.c
